--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -26,3 +26,23 @@ jobs:
       run: |
         npm install
         npm --version
+
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: SSH deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script: |
+          mkdir test
+          cd test
+          git pull origin main
+          npm install
+  
+ 
