--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: SSH deploy
+    - name: SSH deploy test
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
