--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         npm install
         npm --version
+        curl -v telnet://${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }}
 
   deploy:
     needs: [build]
